// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render a primary variant button component, match snapshot and byrole 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100;
  background-color: #2F2235;
  color: #BFC3BA;
}

<button
  class="c0"
/>
`;

exports[`<Button/> should render a secondary variant button component, match snapshot and byrole 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100;
  background-color: inherit;
  color: #2F2235;
}

<button
  class="c0"
/>
`;
